--- a/Extract-From-Api.ipynb
+++ b/Extract-From-Api.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "68283e7a-e39c-4164-825b-827f0fa227bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "3b63adc2-0f71-423b-93d0-b7ac434e6fcc",
    "metadata": {},
